--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,9 @@
 {
     "name": "aitiba/laravelapigeneratorextend",
-    "type": "library",
-    "description": "Laravel Api Generator Extend",
-    "keywords": ["generator","api"],
+    "description": "Laravel Module Generator.",
+    "keywords": ["laravel", "api", "model", "migration","scaffold", "CRUD",  "generator"],
     "homepage": "https://github.com/aitiba/laravelapigeneratorextend",
-    "license": "MIT",
+    "license": "GPL v2",
     "authors": [
         {
             "name": "Aitor Ibañez",
@@ -14,9 +13,9 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0",
-	"pingpong/modules": "2.0.*@dev",
-	"mitulgolakiya/laravel-api-generator": "1.2.*"
+        "php": ">=5.4.0",
+	    "pingpong/modules": "2.0.*@dev",
+	    "mitulgolakiya/laravel-api-generator": "1.2.*"
     },
     "autoload": {
         "psr-4": {
