- Add float field. - Using Collective\Html package instead of deprecated Illuminate\Html

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     "require": {
         "php": ">=5.4.0",
 	    "pingpong/modules": "2.0.*@dev",
-	    "mitulgolakiya/laravel-api-generator": "1.2.*"
+	    "mitulgolakiya/laravel-api-generator": "1.2.*",
+        "laravelcollective/html": "~5.0"
     },
     "autoload": {
         "psr-4": {
