--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "php": ">=5.4.0",
 	    "pingpong/modules": "2.0.*@dev",
 	    "mitulgolakiya/laravel-api-generator": "1.2.*",
-        "laravelcollective/html": "~5.0"
+        "laravelcollective/html": "~5.0",
+	 "ckeditor/ckeditor": "4.*"
     },
     "autoload": {
         "psr-4": {
