--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,9 @@
     ],
     "require": {
         "php": ">=5.4.0",
-	    "pingpong/modules": "2.0.*@dev",
-	    "mitulgolakiya/laravel-api-generator": "1.2.*",
-        "laravelcollective/html": "~5.0",
-	 "ckeditor/ckeditor": "4.*"
+	"pingpong/modules": "2.0.*@dev",
+	"mitulgolakiya/laravel-api-generator": "1.2.*",
+        "laravelcollective/html": "~5.0"
     },
     "autoload": {
         "psr-4": {
