--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "aitiba/laravelapigeneratorextend",
+    "name": "hazicms/generator",
     "description": "Laravel Module Generator.",
     "keywords": ["laravel", "api", "model", "migration","scaffold", "CRUD", "generator", "CMS"],
     "homepage": "https://github.com/aitiba/laravelapigeneratorextend",
@@ -14,14 +14,14 @@
     ],
     "require": {
         "php": ">=5.4.0",
-	"pingpong/modules": "2.0.*@dev",
-	"mitulgolakiya/laravel-api-generator": "1.2.*",
+	   "pingpong/modules": "2.0.*@dev",
+	   "mitulgolakiya/laravel-api-generator": "1.2.*",
         "laravelcollective/html": "~5.0",
         "intervention/image": "~2.2"
     },
     "autoload": {
         "psr-4": {
-            "Aitiba\\": "src"
+            "HaziCms\\": "src"
         }
     }
 }
