--- a/composer.json
+++ b/composer.json
@@ -1,27 +1,38 @@
 {
-    "name": "hazicms/generator",
-    "description": "Generator for HaziCms.",
-    "keywords": ["laravel", "api", "model", "migration","scaffold", "CRUD", "generator", "CMS"],
-    "homepage": "https://github.com/hazicms/generator",
-    "license": "GPL-3.0",
-    "authors": [
-        {
-            "name": "Aitor Ibañez",
-            "email": "aitiba@gmail.com",
-            "homepage": "http://aitoribanez.com",
-            "role": "Developer"
-        }
-    ],
+    "name": "laravel/laravel",
+    "description": "The Laravel Framework.",
+    "keywords": ["framework", "laravel"],
+    "license": "MIT",
+    "type": "project",
     "require": {
-        "php": ">=5.4.0",
-	"pingpong/modules": "2.0.*@dev",
-	"mitulgolakiya/laravel-api-generator": "1.2.*",
-        "laravelcollective/html": "~5.0",
-        "intervention/image": "~2.2"
+        "laravel/framework": "5.0.*",
+        "pingpong/generators": "2.0.*@dev",
+            "pingpong/modules": "2.0.x-dev",
+            "hazicms/generator": "dev-master"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "~4.0",
+        "phpspec/phpspec": "~2.1"
     },
     "autoload": {
+        "classmap": [
+            "database"
+        ],
         "psr-4": {
-            "HaziCms\\": "src"
+            "HaziCms\\": "app/"
         }
+    },
+    "autoload-dev": {
+        "classmap": [
+            "tests/TestCase.php"
+        ]
+    },
+    "scripts": {
+        "post-install-cmd": [
+            "php artisan vendor:publish --provider='HaziCms\\Generator\\Generator\\GeneratorServiceProvider'"
+        ]
+    },
+    "config": {
+        "preferred-install": "dist"
     }
 }
