--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         }
     },
     "scripts": {
-        "post-package-update": [
+        "post-package-install": [
             "php artisan vendor:publish --provider='HaziCms\\Generator\\Generator\\GeneratorServiceProvider'"
         ]
     }
