- composer.json updated.

--- a/composer.json
+++ b/composer.json
@@ -28,11 +28,11 @@
     "scripts": {
         "post-install-cmd": [
             "echo install",
-            "php artisan vendor:publish --provider='hazicms/generator'"
+            "php artisan vendor:publish --provider=hazicms/generator"
         ],
         "post-update-cmd": [
             "echo update",
-            "php artisan vendor:publish --provider='hazicms/generator'"
+            "php artisan vendor:publish --provider=hazicms/generator"
         ]
     }
 }
