--- a/src/Generator/Config/Public/bower.json
+++ b/src/Generator/Config/Public/bower.json
@@ -4,6 +4,7 @@
   "description": "Module generator for HaziCms",
   "dependencies": {
     "admin-lte": "~2.0.5",
-    "bootstrap-datepicker": "~1.4.0"
+    "bootstrap-datepicker": "~1.4.0",
+    "DataTables": "~1.10.7"
   }
 }
